--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "node": ">=0.8.0"
   },
   "devDependencies": {
-    "babel-register": "^6.14.0",
     "babel-core": "^6.5.2",
     "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.5.0",
+    "babel-register": "^6.14.0",
     "del": "^2.2.0",
     "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
@@ -27,7 +27,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.2",
     "gulp-useref": "^3.0.6",
-    "gulp-util": "^3.0.7",
+    "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
     "main-bower-files": "^2.11.1",
     "moment": "^2.15.0",
@@ -51,5 +51,9 @@
         "single"
       ]
     }
+  },
+  "dependencies": {
+    "gulp-crisper": "^1.1.0",
+    "gulp-vulcanize": "^6.1.0"
   }
 }
