--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
     "paper-input": "PolymerElements/paper-input#^1.1.14",
     "shadydom": "webcomponents/shadydom#^v1.0.0",
-    "shadycss": "webcomponents/shadycss#^v1.0.0"
+    "shadycss": "webcomponents/shadycss#^v1.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.4"
   },
   "devDependencies": {
     "chai": "^3.5.0",
